# lucida-downloader

./: Cargo.toml  README.md  flake.nix
src/: app.rs  downloaders.rs  lib.rs  main.rs  models.rs  requests.rs  text_utils.rs  workers.rs
