[package]
name = "lucida-downloader"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lucida"
path = "src/main.rs"

[lints.clippy]
pedantic = "warn"
nursery = "warn"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
json5 = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "rt", "signal"] }
