[package]
name = "lucida-downloader"
version = "0.7.0"
edition = "2024"

[[bin]]
name = "lucida"
path = "src/main.rs"

[lints.clippy]
pedantic = "warn"
nursery = "warn"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
futures = "0.3"
json5 = "1.3"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["parsing", "serde"] }
tokio = { version = "1.52", features = ["macros", "rt", "signal"] }
